# odepy

./: .buildinfo  .gitignore  COPYING  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt
docs/: conf.py
src/odepy/: __init__.py  controllers.py  dense.py  events.py  integrator.py  step.py  tableaus.py  utils.py
tests/: test_dense.py  test_events.py  test_integrator.py  test_interface.py  test_tableaus.py
tests/odepy/: test_controllers.py  test_interface.py
